# dialogflow_ros

./: .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml  requirements.txt
.github/workflows/: python-app.yml  ros-action.yml
launch/: dialogflow.launch  mic.launch
msg/: DialogflowResponse.msg  Event.msg  Intent.msg  Parameter.msg  QueryResult.msg  Response.msg
node/: dialogflow_node
nodes/: dialogflow_node  dialogflow_node.py
test/nodes/: audio_from_file_publisher
