<?xml version="1.0"?>
<package format="2">
  <name>dialogflow_ros</name>
  <version>0.0.0</version>
  <description>The dialogflow package from Dyno Robotics</description>

  <maintainer email="samuel@dynorobotics.se">Samuel Lindgren</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>audio_common</depend>
  <depend>python-pyaudio</depend>

  <export>
  </export>
</package>
